codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
                                                
› 1. Read Only（ 当 前 ）   Codex can read files    
  2. Full Access        Codex can edit files    
                                                
  按  enter 确 认 ， 或 按  esc 返 回
